objects/ASI_TH_CRM_Category__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TH_CRM_Category_Code__c</fullName>
        <label>Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Category_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Category External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Category (TH)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_TH_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Category_Code__c</columns>
        <columns>ASI_TH_CRM_English_Name__c</columns>
        <columns>ASI_TH_CRM_Sequence__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ASI_TH_CRM_Category_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Category__c.ASI_TH_CRM_Category</value>
        </filters>
        <label>All TH Categories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <recordTypes>
        <fullName>ASI_CN_CRM_Category</fullName>
        <active>false</active>
        <label>ASI CN CRM Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Category</fullName>
        <active>true</active>
        <label>ASI TH CRM Category</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>